--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
   flutter_local_notifications: ^1.4.4+1
   path_provider: ^1.6.11
+  # path_provider: ^0.5.0+1
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +27,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/
+    - images/icon.jpg
+    - images/push.jpg
